--- a/JemeprésenteV1/etudes.html
+++ b/JemeprésenteV1/etudes.html
@@ -1,6 +1,6 @@
 <hi>Mes études</hi>
 
-<p>J'ai fait un DEP en vente et représentation à Drummondville et Victoriaville.</p>
+<p>J'ai ffait un DEP en vente et représentation à Drummondville et Victoriaville.</p>
 <p>Présentement j'ai un idée d'entreprise et j'ai eu un coup de coeur pour le design et surtout le UX. Alors j'ai voulu ajouté des connaissances supplémentaire.</p>
 
 
