--- a/JemeprésenteV2/index.html
+++ b/JemeprésenteV2/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Maggy Gagne Lemire</h1>
 
-    <img src="img./maggyetkim.jpg" height="360" width="288"/>
+    <img src="img./maggyetkim.jpg" height="360" width="288"/></body>
 
 
         <h2><a href="etudes.html>MES ETUDES</a>"</h2>
@@ -17,7 +17,4 @@
         <h2>Mes loisirs</h2> <a href="loisirs.html"></a>
 
         <h2>Mes rêves</h2> <a href="reves.html"></a>
-
-
-</body>
 </html>
