--- a/06_Exercice_Bootstrap_Grid/HTML/index.html
+++ b/06_Exercice_Bootstrap_Grid/HTML/index.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>Excercice 6</title>
+    <link rel="stylesheet" href="../CSS/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 <body>
 
+<div class="container-fluid bg">
+    <div class="row no-gutters align-items-center text-center hauteur100">
+
+        <div class="col-xl-12" >
+            <h1>Texte par dessus image</h1>
+            <hr>
+            <p>
+                Tes bonne, tes capable, tes la meilleure, lache pas.
+            </p>
+            <button type="button" class="btn btn-danger">Bouton</button>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="container-fluid">
+    <div class="row no-gutters align-items-start bgcolor padding text-center hauteur100">
+        <div class="offset-xl-3"></div>
+        <div class="col-xl-6">
+            <h2>Texte par dessus image</h2>
+            <hr class="bordercolor">
+            <p>
+                Tes bonne, tes capable, tes la meilleure, lache pas.
+            </p>
+            <button type="button" class="btn btn-light">Bouton</button>
+        </div>
+        <div class="offset-xl-3"></div>
+    </div>
+</div>
+
+
+<div>
+    <div class="container">
+        <div class="row text-center padding">
+            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-hand-peace fa-3x"></i>
+                <h4>Peace</h4>
+                <h5>blablablalblalblalbllallaaaa</h5>
+            </div>
+            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-heart fa-3x"></i>
+                <h4>Peace</h4>
+                <h5>blablablalblalblalbllallaaaa</h5>
+            </div>
+            <h2 class="text-center">Texte par dessus image</h2>
+            <hr>
+            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-eye fa-3x"></i>
+                <h4>Peace</h4>
+                <h5>blablablalblalblalbllallaaaa</h5>
+            </div>
+            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-paper-plane fa-3x"></i>
+                <h4>Peace</h4>
+                <h5>blablablalblalblalbllallaaaa</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="container-fluid">
+    <div class="row no-gutters">
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_1.jpg" height="560" width="560"/></div>
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_2.jpg" height="560" width="560"/></div>
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_3.jpg" height="560" width="560"/></div>
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_4.jpg" height="560" width="560"/></div>
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_1.jpg" height="560" width="560"/></div>
+        <div class="col-xl-4 col-md-6 col-12"><img src="../IMG/col4_2.jpg" height="560" width="560"/></div>
+    </div>
+</div>
+
+
+
+
+
+
+<script src="../JS/jquery-3.3.1.min.js"></script>
+<script src="../JS/bootstrap.js"></script>
+
 </body>
+
+
+
+
 </html>
