--- a/Han Solo 2/HTML/index.html
+++ b/Han Solo 2/HTML/index.html
@@ -15,7 +15,9 @@
 <header>
     <h1>Han Solo</h1>
     <!-- Insérer l'image d'Han Solo ici -->
-   <a href="https://fr.wikipedia.org/wiki/Han_Solo" target="_blank">  <img src="../img/Han%20Solo.jpg" height="300" width="600"/> </a>
+   <a href="https://fr.wikipedia.org/wiki/Han_Solo" target="_blank">
+       <img src="../img/Han%20Solo.jpg" height="300" width="600"/>
+   </a>
 
     <!-- Faire le menu onepage ici -->
     <h4 id="presentation" class="presentation">Visiter la section présentation</h4>
@@ -40,7 +42,9 @@
 
 <h3>MEILLEUR AMI</h3>
 
-<a href="https://fr.wikipedia.org/wiki/Chewbacca" target="_blank">  <img src="../img/chewbacca.png" height="225" width="211"/> </a>
+<a href="https://fr.wikipedia.org/wiki/Chewbacca" target="_blank">
+    <img src="../img/chewbacca.png" height="225" width="211"/>
+</a>
 <a href="#presentation"></a>
 <p>Son meilleur ami se nomme Chewbacca.</p>
 
