--- a/07_Exercise_Facebook/HTML/Index.html
+++ b/07_Exercise_Facebook/HTML/Index.html
@@ -11,41 +11,44 @@
 </head>
 <body>
 <div class="container-fluid">
-        <div class="col-1">
 
-        </div>
+    <div class="row">
 
-        <div class="col-2" class="container-fluid">
-            <div class="row">
-                <div class="card bg-light">
-                    <div class="card-body">
-                        <hi class="card-title ">Status: Feeling Blue</hi>
-                        <p class="card-text"> like </p>
+        <div class="col-xl-3">
 
+            <div class="card bg-light mb-3">
+                <div class="card-body">
+                    <h1 class="card-title text-center">My Profile</h1>
+                    <p class="text-center">image d'aigle</p>
+
+                    <div class="card bg-light mb-3">
+                        <div class="card-body">
+
+                            <h5 class="card-title text-center">interests</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-light mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Ey!</h5>
+                            <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="text-center">Link</p>
+                            <p class="text-center">Link</p>
+                            <p class="text-center">Link</p>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
-            <div class="row">
-                <div class="card bg-light">
-                    <div class="card-body">
-                        <h2 class="text-center">Bo</h2>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row">
-
-            </div>
-
         </div>
 
-        <div class="col-3">
-
+        <div class="col-xl-7">
         </div>
+
+        <div class="col-xl-2">
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
