--- a/07_Exercise_Facebook/HTML/Index.html
+++ b/07_Exercise_Facebook/HTML/Index.html
@@ -5,8 +5,11 @@
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
+    <title>Exercise 7</title>
+    <link rel="stylesheet" href="../CSS/bootstrap.css">
     <link rel="stylesheet" href="../CSS/Style.css">
-    <title>Title</title>
+
+
 
 </head>
 <body>
@@ -43,12 +46,21 @@
         </div>
 
         <div class="col-xl-7">
+            <div class="card bg-light mb-3">
+                <div class="card-body">
+                    <h5 class="card-title"> Status: Feeling Blue</h5>
+                    <p class="card-text">like</p>
+                </div>
+            </div>
+            
         </div>
 
         <div class="col-xl-2">
         </div>
     </div>
 </div>
+<script src="../JS/jquery-3.3.1.min.js"></script>
+<script src="../JS/bootstrap.js"></script>
 
 </body>
 </html>
