--- a/06_Exercice_Bootstrap_Grid/HTML/index.html
+++ b/06_Exercice_Bootstrap_Grid/HTML/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr-ca">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
 
     <title>Excercice 6</title>
     <link rel="stylesheet" href="../CSS/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 
 </head>
 <body>
 
-<div class="container-fluid bg">
-    <div class="row no-gutters align-items-center text-center hauteur100">
+<div class="container-fluid bg h-100">
+    <div class="row no-gutters align-items-center text-center h-100">
 
         <div class="col-xl-12" >
             <h1>Texte par dessus image</h1>
-            <hr>
+            <hr class="my-5">
             <p>
                 Tes bonne, tes capable, tes la meilleure, lache pas.
             </p>
@@ -28,12 +29,12 @@
 </div>
 
 
-<div class="container-fluid">
-    <div class="row no-gutters align-items-start bgcolor padding text-center hauteur100">
+<div class="container-fluid bgcolor">
+    <div class="row no-gutters align-items-start  padding text-center hauteur100">
         <div class="offset-xl-3"></div>
         <div class="col-xl-6">
             <h2>Texte par dessus image</h2>
-            <hr class="bordercolor">
+            <hr class="bordercolor my-5">
             <p>
                 Tes bonne, tes capable, tes la meilleure, lache pas.
             </p>
@@ -47,15 +48,21 @@
 <div>
     <div class="container">
         <div class="row text-center padding">
-            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-hand-peace fa-3x"></i>
-                <h4>Peace</h4>
-                <h5>blablablalblalblalbllallaaaa</h5>
-            </div>
-            <div class="col-xl-3 col-md-6 col-12"><i class="far fa-heart fa-3x"></i>
-                <h4>Peace</h4>
-                <h5>blablablalblalblalbllallaaaa</h5>
-            </div>
+            <div class="col-12">
             <h2 class="text-center">Texte par dessus image</h2>
+            <hr class="my-5">
+        </div>
+            <div class="col-xl-3 col-md-6 col-12">
+                <i class="far fa-hand-peace fa-3x"></i>
+                <h4>Peace</h4>
+                <h5>blablablalblalblalbllallaaaa</h5>
+            </div>
+            <div class="col-xl-3 col-md-6 col-12">
+                <i class="far fa-heart fa-3x"></i>
+                <h4>Peace</h4>
+                <p>blablablalblalblalbllallaaaa</p>
+            </div>
+
             <hr>
             <div class="col-xl-3 col-md-6 col-12"><i class="far fa-eye fa-3x"></i>
                 <h4>Peace</h4>
