--- a/07_Exercise_Facebook/HTML/Index.html
+++ b/07_Exercise_Facebook/HTML/Index.html
@@ -46,17 +46,20 @@
         </div>
 
         <div class="col-xl-7">
+            <div class="row">
+            </div>
             <div class="card bg-light mb-3">
                 <div class="card-body">
                     <h5 class="card-title"> Status: Feeling Blue</h5>
                     <p class="card-text">like</p>
                 </div>
             </div>
-            
         </div>
+
 
         <div class="col-xl-2">
         </div>
+        <div class="col-2"></div>
     </div>
 </div>
 <script src="../JS/jquery-3.3.1.min.js"></script>
