--- a/Sommatif_2/Index.html
+++ b/Sommatif_2/Index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
     <title>Sommatif 2 intra 25/100</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="../CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
 
 
 </head>
@@ -28,7 +28,7 @@
     </div>
 
 
-<script src="../JS/jquery-3.3.1.min.js"></script>
-<script src="../JS/bootstrap.js"></script>
+<script src="JS/jquery-3.3.1.min.js"></script>
+<script src="JS/bootstrap.js"></script>
 </body>
 </html>
