--- a/Sommatif_2/Index.html
+++ b/Sommatif_2/Index.html
@@ -12,8 +12,9 @@
 
 </head>
 <body>
+<!-- Zone 1  -->
     <div class="container-fluid parallax h-100">
-        <div class="row h-75 align-items-end">
+        <div class="row h-75 align-items-end espaceBas">
             <div class="col-xl-3 offset-xl-6">
                 <h2 class="carreJaune" >Nouveau dès l'automne 2018 baisse des préalables en mathématique!</h2>
             </div>
@@ -22,11 +23,36 @@
             <div class="col-12">
                 <h3>Techniques de l'informatique 420,bo</h3>
             </div>
-
-
         </div>
     </div>
+<!-- Zone 1  -->
 
+<!-- Zone 2  -->
+<div class="container">
+    <div class="row d-none d-sm-block">
+        <div class="col-6"></div>
+        <h2>Pourquoi choisir l’informatique ?</h2>
+        <p>Si tu souhaites concevoir des applications Web, développer des logiciels, travailler avec les nouvelles technologies et apprendre par des projets concrets, on est fait pour s’entendre! En Techniques de l’informatique, tu auras la chance de travailler en équipe en plus d’acquérir des compétences en sécurité informatique et en support technique. De plus, avec deux stages rémunérés, tu pourras mettre en pratique tes connaissances et t’initier au monde du marché du travail tout en te faisant valoir auprès des employeurs.</p>
+        <h3>Tu apprendras entre autres a ...</h3>
+        <ul>
+            <li>Réaliser des applications Web modernes</li>
+            <li>Réaliser des applications Web modernes</li>
+            <li>Réaliser des applications Web modernes</li>
+            <li>Réaliser des applications Web modernes</li>
+            <li>Réaliser des applications Web modernes</li>
+            <li>Réaliser des applications Web modernes</li>
+        </ul>
+        <button type="button" class="btn-danger">Inscris-toi dès maintenant</button>
+        <div class="col-xl-6 ">
+
+            <img src="IMG/Océanie/normal(1).jpg" height="640" width="640"/></div>
+
+    </div>
+</div>
+<!-- Zone 2  -->
+
+<!-- Zone 3  -->
+<div class="container-fluid parallaxbg h-100">
 
 <script src="JS/jquery-3.3.1.min.js"></script>
 <script src="JS/bootstrap.js"></script>
