--- a/Sommatif_2/Index.html
+++ b/Sommatif_2/Index.html
@@ -30,22 +30,26 @@
 <!-- Zone 2  -->
 <div class="container">
     <div class="row d-none d-sm-block">
-        <div class="col-6"></div>
-        <h2>Pourquoi choisir l’informatique ?</h2>
-        <p>Si tu souhaites concevoir des applications Web, développer des logiciels, travailler avec les nouvelles technologies et apprendre par des projets concrets, on est fait pour s’entendre! En Techniques de l’informatique, tu auras la chance de travailler en équipe en plus d’acquérir des compétences en sécurité informatique et en support technique. De plus, avec deux stages rémunérés, tu pourras mettre en pratique tes connaissances et t’initier au monde du marché du travail tout en te faisant valoir auprès des employeurs.</p>
-        <h3>Tu apprendras entre autres a ...</h3>
-        <ul>
-            <li>Réaliser des applications Web modernes</li>
-            <li>Réaliser des applications Web modernes</li>
-            <li>Réaliser des applications Web modernes</li>
-            <li>Réaliser des applications Web modernes</li>
-            <li>Réaliser des applications Web modernes</li>
-            <li>Réaliser des applications Web modernes</li>
-        </ul>
-        <button type="button" class="btn-danger">Inscris-toi dès maintenant</button>
-        <div class="col-xl-6 ">
+        <div class="col-6 align-self-start">
+            <div class="w-100"></div>
+            <h2>Pourquoi choisir l’informatique ?</h2>
+            <p>Si tu souhaites concevoir des applications Web, développer des logiciels, travailler avec les nouvelles technologies et apprendre par des projets concrets, on est fait pour s’entendre! En Techniques de l’informatique, tu auras la chance de travailler en équipe en plus d’acquérir des compétences en sécurité informatique et en support technique. De plus, avec deux stages rémunérés, tu pourras mettre en pratique tes connaissances et t’initier au monde du marché du travail tout en te faisant valoir auprès des employeurs.</p>
+            <h3>Tu apprendras entre autres a ...</h3>
+            <ul>
+                <li>Réaliser des applications Web modernes</li>
+                <li>Réaliser des applications Web modernes</li>
+                <li>Réaliser des applications Web modernes</li>
+                <li>Réaliser des applications Web modernes</li>
+                <li>Réaliser des applications Web modernes</li>
+                <li>Réaliser des applications Web modernes</li>
+            </ul>
+            <button type="button" class="btn-danger">Inscris-toi dès maintenant</button>
+        </div>
 
-            <img src="IMG/Océanie/normal(1).jpg" height="640" width="640"/></div>
+        <div class="col-xl-6 align-self-end">
+            <div class="w-100"></div>
+
+            <img src="IMG/Océanie/normal(1).jpg" height="400" width="400"/></div>
 
     </div>
 </div>
