Projet Final Modification

--- a/Projet_Final/index.html
+++ b/Projet_Final/index.html
@@ -68,7 +68,7 @@
         <div class="col-xl-4 bg-white py-5">
 
             <i class="fas fa-route fa-3x"></i>
-            <h1>De Lisbonne à Saint-Jacques de Compostelle</h1>
+            <h1>Lisbonne à Compostelle</h1>
             <p>Je vais parcourir 580 Kilometre à pied</p>
             <button type="button" class="btn btn-block">Itinéraire</button>
         </div>
@@ -79,7 +79,7 @@
 
 <div class="container-fluid parallaxZone3 h-100">
     <div class="row no-gutters">
-        <div class="offset-xl-6 col-xl-4 col-md-6 text-black paddingZone3 text-justify col-md-">
+        <div class="offset-xl-6 col-xl-4 col-md-6 text-black paddingZone3 text-justify">
             <h1>Le chemin de Compostelle : un pèlerinage inoubliable</h1>
             <p>Beaucoup de gens parlent DU chemin de Compostelle (Santiago de compostela). Mais en réalité, il serait plus juste d’évoquer LES chemins de Compostelle. En effet, les chemins menant vers Compostelle (en Espagne) sont toutes les routes de pèlerinage qui ont été empruntées par différents marcheurs.</p>
         </div>
