--- a/Projet_Final/index.html
+++ b/Projet_Final/index.html
@@ -15,9 +15,9 @@
 <!-- Zone 1  -->
 
 <div class="container-fluid parallax h-100 ">
-        <div class="row h-100 text-center align-items-center no-gutters" >
-            <div> class="col-12 text-white" >
-                <h1 class="display-3 Big_Noddle" > Compostelle novembre 2019 </h1>
+        <div class="row h-100 text-center align-items-center no-gutters">
+            <div class="col-12 text-white">
+                <h1 class="display-3 Big_Noddle"> Compostelle novembre 2019 </h1>
             </div>
         </div>
 </div>
@@ -90,17 +90,17 @@
 <div class="container-fluid">
     <div class="row no-gutters">
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-1.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-1.jpg" height="560" width="560" alt="W3C web site"/></div>
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-2.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-2.jpg" height="560" width="560" alt="W3C web site"/></div>
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-3.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-3.jpg" height="560" width="560" alt="W3C web site"/></div>
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-4.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-4.jpg" height="560" width="560" alt="W3C web site"/></div>
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-5.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-5.jpg" height="560" width="560" alt="W3C web site"/></div>
         <div class="col-xl-4 col-md-6 col-12">
-            <img src="IMG./Portfolio-6.jpg" height="560" width="560"/></div>
+            <img src="IMG./Portfolio-6.jpg" height="560" width="560" alt="W3C web site"/></div>
 
     </div>
 </div>
