--- a/Projet_Final/index.html
+++ b/Projet_Final/index.html
@@ -43,7 +43,7 @@
 
 
 
- <!-- Zone 2  -->
+<! -- Zone 2  -->
 
 <div class="container-fluid">
     <div class="row align-items-center text-center">
@@ -114,7 +114,9 @@
             <hr class="my-5">
         </div>
      </div>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/-5hySxnwLr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<video controls preload="metadata" autoplay="autoplay" loop="loop">
+        <source src="IMG./The_Way.mp4">
+</video>
 </div>
 
 
