--- a/Projet_Final/index.html
+++ b/Projet_Final/index.html
@@ -43,7 +43,7 @@
 
 
 
-<! -- Zone 2  -->
+<!-- Zone 2  -->
 
 <div class="container-fluid">
     <div class="row align-items-center text-center">
@@ -115,7 +115,7 @@
         </div>
      </div>
 
-<video controls preload="metadata" autoplay="autoplay" loop="loop">
+<video controls preload="metadata" autoplay="autoplay" loop="loop" muted="muted">
         <source src="IMG./The_Way.mp4">
 </video>
 </div>
