--- a/Projet_Final_IW2/index.html
+++ b/Projet_Final_IW2/index.html
@@ -13,8 +13,10 @@
 
 <Section id="Navbar">
 
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src=".../IMG./Logo6.jpg">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -120,7 +122,7 @@
 
 
 <script src="JS/jquery-3.3.1.min.js"></script>
-<script src="htps//cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="JS/bootstrap.js"></script>
 </body>
 
