--- a/Projet_Final_IW2/index.html
+++ b/Projet_Final_IW2/index.html
@@ -25,19 +25,21 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <!---menu déroulant--->
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Dropdown link
                         </a>
-                        <!---menu déroulant--->
+
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="#">Action</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
-                        <!---menu déroulant--->
+
                     </li>
+                    <!---menu déroulant--->
                 </ul>
                 <!---menu horrizontale--->
                 <a class="nav-item nav-link" href="#Blogue">Blogue</a>
@@ -53,7 +55,6 @@
                 </li>
                 <i class="fab fa-instagram"></i>
                 <i class="fab fa-aviato"></i>
-                </from>
                 <!---Icone --->
             </div>
         </div>
@@ -116,7 +117,7 @@
 <div class="container-fluid parallaxZone3 h-100">
     <div class="row no-gutters">
         <div class="offset-xl-6 col-xl-4 col-md-6 text-black paddingZone3 text-justify">
-            <h1>Le chemin de Compostelle : un pèlerinage inoubliable</h1>
+            <h1 class="iphone ipad">Le chemin de Compostelle : un pèlerinage inoubliable</h1>
             <p>Beaucoup de gens parlent DU chemin de Compostelle (Santiago de compostela). Mais en réalité, il serait plus juste d’évoquer LES chemins de Compostelle. En effet, les chemins menant vers Compostelle (en Espagne) sont toutes les routes de pèlerinage qui ont été empruntées par différents marcheurs.</p>
         </div>
     </div>
