--- a/Projet_Final_IW2/index.html
+++ b/Projet_Final_IW2/index.html
@@ -118,7 +118,7 @@
     <div class="row no-gutters">
         <div class="offset-xl-6 col-xl-4 col-md-6 text-black paddingZone3 text-justify">
             <h1 class="iphone ipad">Le chemin de Compostelle : un pèlerinage inoubliable</h1>
-            <p>Beaucoup de gens parlent DU chemin de Compostelle (Santiago de compostela). Mais en réalité, il serait plus juste d’évoquer LES chemins de Compostelle. En effet, les chemins menant vers Compostelle (en Espagne) sont toutes les routes de pèlerinage qui ont été empruntées par différents marcheurs.</p>
+            <p class="formatxs formatmd">Beaucoup de gens parlent DU chemin de Compostelle (Santiago de compostela). Mais en réalité, il serait plus juste d’évoquer LES chemins de Compostelle. En effet, les chemins menant vers Compostelle (en Espagne) sont toutes les routes de pèlerinage qui ont été empruntées par différents marcheurs.</p>
         </div>
     </div>
 </div>
