Premier cours de Java
ouff

--- a/Projet_Final/index.html
+++ b/Projet_Final/index.html
@@ -90,7 +90,7 @@
 <div class="container text-center padding youtube">
     <div class="row ">
         <div class="col-12">
-            <h1 class="text-center display-3 text-yellow ">Camino de Santiago</h1>
+            <h1 class="text-center display-3 text-yellow ">Démonstration</h1>
             <hr class="my-5">
         </div>
      </div>
