--- a/js/index.html
+++ b/js/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+
 </head>
 <body>
-<script>
-    alert("Hello JavaScript World");
 
-</script>
 
-<script src="js/premierscript.js"></script>
+<script src="js/no3.js"></script>
 </body>
 </html>
