Remise du Projet_HTML

--- a/Projet_html/contact.html
+++ b/Projet_html/contact.html
@@ -6,28 +6,77 @@
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+
+    <meta name = "Contact" content = "Page contact"> <meta name = " keywords " content = " sangria, courriel, commentaires, " >
+    <meta name = " author " content = "Maggy Gagné Lemire" >
+    <title>
+        Page contact avec un formulaire pour nous contacter et nous trouver.
+    </title>
 </head>
 <body>
-
-
-
-
-
-
-
-
+<?php
+        include "header.php";
+?>
 
 <!-- section 1 -->
-
+<div class="container-fluid parallaxZone2">
+</div>
 <!-- section 1 -->
 
-<!-- section 2  -->
-<!-- section 2  -->
+
 
 <!-- section 3  -->
-<!-- section 3  -->
+<div class="container question">
+    <h2 class="text-center ">Questions, commentaires?</h2>
+    <hr>
+    <form>
+</div>
+<div class="form-group">
+    <label for="fname">Prénom</label>
+    <input type="text" class="form-control" id="fname" name="firstname" placeholder="Votre prénom">
+</div>
+<div class="form-group">
+    <label for="lname">Nom de famille</label>
+    <input type="text" class="form-control" id="lname" name="lastname" placeholder="Votre nom de famille">
+</div>
+<div class="form-group">
+    <label for="email">Courriel</label>
+    <input type="email" class="form-control" id="email" placeholder="Entrez votre courriel">
+</div>
+<div class="form-group">
+    <label for="country">Pays</label>
+    <select id="country" name="country">
+        <option value="australia">France</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+    </select>
+</div>
+<div class="form-group">
+    <label for="subject">Commentaires ou questions</label>
+    <textarea class="form-control" id="subject" name="subject" placeholder="Vas-y! C’est le moment de nous demander tout ce que tu veux!" style="height:200px"></textarea>
+</div>
 
+<button type="submit" class="btn btn-default">Envoyer</button>
+</form>
+<!-- section 3  -->
+<!-- section 2  -->
+<section id="contact">
+    <div class="container-fluid bgcolor">
+        <div class="row ">
+            <div class="col-12 text-center text paddingZone2 text-justify">
+                <h1 class="text">C’est ici que tout commence.</h1>
+                <p class="p">Envie de partager vos meilleurs moments? D’en connaître davantage au sujet de nos produits? Donnez-nous de vos nouvelles!</p>
+                <a href="mailto:info@sangria.ws?subject=Faisons%20équipe">info@sangria.ws</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- section 2  -->
 <!-- section 4  -->
+<div class="container-fluid">
+<iframe class=gmaps-frame src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174615.05457435653!2d-71.48177659240847!3d46.85628295570747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb8968a05db8893%3A0x8fc52d63f0e83a03!2zUXXDqWJlYywgUUM!5e0!3m2!1sfr!2sca!4v1563131711201!5m2!1sfr!2sca" ></iframe>
+</div>
 <!-- section 4 -->
 
 
