--- a/Projet_html/index.html
+++ b/Projet_html/index.html
@@ -6,11 +6,18 @@
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+
+    <meta name = "Accueil" content = "Page D'accueil avec demonstration"> <meta name = " keywords " content = " video, mission, été, sangria," >
+    <meta name = " author " content = "Maggy Gagné Lemire" >
+
+    <title>
+        Page explicative de mon hobby d'été.
+    </title>
 </head>
 <body>
-
-
-
+<?php
+        include "header.php";
+?>
 <section id="carousel">
 <!-- section 1  -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -46,7 +53,7 @@
 
 <!-- section 2  -->
 <section id="recette">
-    <div class="container-fluid bgcolor h-100">
+    <div class="container-fluid bgcolor h-100 md">
         <div class="row no-gutters">
             <div class="text-center text paddingZone2 text-justify">
                 <h1>Pourquoi?</h1>
@@ -78,11 +85,11 @@
             <div class="col-xl-9 mx-auto">
                 <div class="cta-inner text-center rounded">
                     <h2 class="section-heading mb-4 text">
-                        <span class="section-heading-upper">Mission d'été</span>
+                        <span class="section-heading-upper md">Mission d'été</span>
                         <br>
                     </h2>
                     <p>
-                    <span class="section-heading-lower">Cette été ma mission est de me concentrer sur mes études et m’entrainer pour mon voyage à Compostelle du mois de novembre. work hard in silence let success make the noise.</span>
+                    <span class="section-heading-lower md">Cette été ma mission est de me concentrer sur mes études et m’entrainer pour mon voyage à Compostelle du mois de novembre. work hard in silence let success make the noise.</span>
                     </p>
 
                 </div>
