--- a/Projet_html/recette.html
+++ b/Projet_html/recette.html
@@ -6,10 +6,19 @@
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+
+    <meta name = "Recette" content = "Recette de Sangria à la poire"> <meta name = " keywords " content = " Sangria, Poire, Recette, vin, alcool " >
+    <meta name = " author " content = "Maggy Gagné Lemire" >
+
+    <title>
+       Recette de SANGRIA À LA POIRE & AUX RAISINS BLANCS
+    </title>
 </head>
 <body>
 
-
+<?php
+        include "header.php";
+?>
 
 <!-- section 1  -->
 <div class="container-fluid parallaxZone">
@@ -24,7 +33,6 @@
         <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
                 <h2 class="section-heading mb-4 text">
-                    <span class="section-heading-upper">Anecdote</span>
                     <span class="section-heading-lower">Saviez-vous que ce punch estival classique tire son nom de sa couleur rouge foncé ? Concocté pour la première fois en Espagne, il a tout de suite été apprécié des habitants locaux qui l’ont baptisé sangría, qui signifie saignée en espagnol.</span>
                 </h2>
                 <p class="mb-0"> </p>
@@ -36,17 +44,22 @@
 <!-- section 2  -->
 
 <!-- section 3  -->
-<div class="container-fluid">
-    <div class="row align-items-center text-center">
+<div class="container">
+    <div class="row section3-2 ">
+        <div class="col-12">
+            <h1 class="text-center display-3 ">SANGRIA À LA POIRE & AUX RAISINS BLANCS</h1>
+            <hr class="my-5">
+        </div>
+    </div>
+            <div class="row text-center md">
+                <div class="col-xl-6 py-5">
 
-        <div class="col-xl-6 bg-white py-5">
-
-            <i class="fas fa-glass-cheers fa-5x"></i>
-            <h1>ingrédients</h1>
+            <i class="fas fa-glass-cheers fa-5x text-center"></i>
+            <h2>ingrédients</h2>
             <dd>
-                 <li>1 L (34 oz) de vin rouge</li>
+                <li>1 L (34 oz) de vin rouge</li>
                 <li>360 ml (12 oz) de jus d’orange</li>
-               <li> 240 ml (8 oz) de soda citron-lime</li>
+                <li> 240 ml (8 oz) de soda citron-lime</li>
                 <li>Rondelles d’orange</li>
                 <li>Rondelles de citron</li>
                 <li>Rondelles de lime</li>
@@ -54,34 +67,35 @@
                 <li>Glaçons</li>
                 <li>Donne 10 à 12 portions</li>
             </dd>
+                </div>
 
-        </div>
-        <div class="col-xl-6 bg-white py-5 d-none d-sm-block">
+            <div class="col-xl-6 bg-white py-5 d-none d-sm-block">
 
-            <i class="fas fa-blender fa-5x"></i>
+                <i class="fas fa-blender fa-5x"></i>
 
-            <h1>Préparation</h1>
-            <p>Dans un bol à punch ou un pichet, ajouter tous les ingrédients.
-                <br>
-                Remuer à l’aide d’une cuillère à mélange.
-                <br>
-                Servir dans des verres old-fashioned contenant quelques glaçons en y ajoutant des fruits du bol</p>
+                <h2>Préparation</h2>
+                <p>Dans un bol à punch ou un pichet, ajouter tous les ingrédients.
+                    <br>
+                    Remuer à l’aide d’une cuillère à mélange.
+                    <br>
+                    Servir dans des verres old-fashioned contenant quelques glaçons en y ajoutant des fruits du bol</p>
+            </div>
+         </div>
 
-        </div>
-    </div>
+
 </div>
 <!-- section 3  -->
 
 <!-- section 4  -->
-<div class="jumbotron">
+<div class="jumbotron jumbotron-fluid bg4 text-center md">
+    <div class="container-fluid">
     <h1 class="display-4">Fun Fun Fun!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-        to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</p> </div>
-
+    <p class="lead">Explorez les saveurs </p>
+    <p>Explorez les saveurs audacieuses des cocktails lors de vos soirées entre amis..</p> <p class="lead">
+    <a class="btn btn-primary btn-lg bouton" href="http://sangriapepito.com/" target="_blank" role="button">Voyez tout les produits</a>
+</p>
+    </div>
+</div>
 <!-- section 4 -->
 
 
