Remise du Projet_html
j'ai essayer de refactorer toute mes ficher pour que ma navbar soit partout et ça ne fonctionne toujours pas plus well im sorry

--- a/07_Exercise_Facebook/HTML/Index.html
+++ b/07_Exercise_Facebook/HTML/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- index.html -->
+<!-- index.php -->
 <!-- Par Maggy Gagné Lemire avec peine et de misère :P  -->
 <!-- Le 11 avril 2019 -->
 <html lang="fr-ca">
