--- a/Han Solo 2/HTML/index.html
+++ b/Han Solo 2/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- index.html -->
+<!-- index.php -->
 <!-- Par Maggy Gagné Lemire avec peine et de misère :P  -->
 <!-- Le 2017-05-04 STAR WARS DAY!!!!! -->
 <html lang="fr-ca">
