--- a/Exercice jQuery1 StormTrooper 2/index.html
+++ b/Exercice jQuery1 StormTrooper 2/index.html
@@ -23,7 +23,7 @@
 	<div class="row row3">
 	</div>
 	<div class="row row4 align-items-center">
-			<h1>STARWARS STORMTROOPER</h1>
+			<h1 id="ss">STARWARS STORMTROOPER</h1>
 	</div>
 </div>
 
@@ -68,7 +68,7 @@
 	<div class="row row100 align-items-center">
 		<div class="col-md-4 text-center blanc">
 			<h1>DARTH VADER</h1>
-			<p>Son éducation en tant que Jedi auprès d'Obi-Wan Kenobi, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'empereur Palpatine, sa rédemption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p>
+			<p id="dv">Son éducation en tant que Jedi auprès d'Obi-Wan Kenobi, son basculement du côté obscur de la Force pour devenir l'apprenti et le bras armé de l'empereur Palpatine, sa rédemption finale lui permettant d'accomplir sa destinée — ramener l'équilibre dans la Force et éliminer les Sith — et le fait qu'il soit le père des jumeaux Luke Skywalker et Leia Organa, constituent l'intrigue principale des deux premières trilogies.</p>
 		</div>
 	</div>
 </div>
