changer de place les scripts
mais ne fonctionne toujours pas

--- a/Flash/Index.html
+++ b/Flash/Index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="favicon.png" />
   <title>Flash</title>
-
 </head>
 <body>
 		<img id="flashID" class="flashClass" src="flash.jpg" width="200px"/>
@@ -21,11 +20,13 @@
 		<input type="button" value="Teleport" id="boutonTeleport"/>Flash se téléporte sous ces boutons et retourne en haut lorsque l'on clique de nouveau<br />
 <input type="button" value="VitesseSupreme" id="boutonVitesseSupreme"/>Flash doit apparaître et disparaître toutes les 500MS pendant 5 secondes.<br />
 <input type="button" value="Nuke" id="boutonNuke"/>Ce bouton fait afficher une image d'explosion dans l'écran et enlève tout le reste (boutons images, etc).<br />
-		   
+
+
+		<script src="JS/jquery-3_4_1_min.js"></script>
+		<script src="evenements.js"></script>
 </body>
+
+
 </html>
 
-
-<script src="JS/jquery-3.4.1.min.js"></script>
-<script src="evenements.js"></script>
 
