--- a/Flash/Index.html
+++ b/Flash/Index.html
@@ -22,8 +22,8 @@
 <input type="button" value="Nuke" id="boutonNuke"/>Ce bouton fait afficher une image d'explosion dans l'écran et enlève tout le reste (boutons images, etc).<br />
 
 
-		<script src="JS/jquery-3_4_1_min.js"></script>
-		<script src="evenements.js"></script>
+		<script src="js/jquery-3_4_1_min.js"></script>
+		<script src="js/evenements.js"></script>
 </body>
 
 
