mise a jour 26 aout

--- a/Flash/Index.html
+++ b/Flash/Index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <link rel="icon" type="image/png" href="favicon.png" />
   <title>Flash</title>
+
 </head>
 <body>
-		<img id="flashID" class="flashClass" src="flash.jpg" width="200px"/>
+		<img id="flashID" alt="photo de Flash" class="flashClass" src="flash.jpg" width="200px"/>
 		<br/>
 		<input type="button" value="Déplacer Gauche" id="boutonGauche"/> <br/>
 		<input type="button" value="Déplacer Droite" id="boutonDroite"/> <br/>
@@ -22,7 +23,7 @@
 <input type="button" value="Nuke" id="boutonNuke"/>Ce bouton fait afficher une image d'explosion dans l'écran et enlève tout le reste (boutons images, etc).<br />
 
 
-		<script src="js/jquery-3_4_1_min.js"></script>
+		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/evenements.js"></script>
 </body>
 
