--- a/Flash/Index.html
+++ b/Flash/Index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
   <link rel="icon" type="image/png" href="favicon.png" />
   <title>Flash</title>
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 		<img id="flashID" alt="photo de Flash" class="flashClass" src="flash.jpg" width="200px"/>
@@ -22,6 +25,7 @@
 <input type="button" value="VitesseSupreme" id="boutonVitesseSupreme"/>Flash doit apparaître et disparaître toutes les 500MS pendant 5 secondes.<br />
 <input type="button" value="Nuke" id="boutonNuke"/>Ce bouton fait afficher une image d'explosion dans l'écran et enlève tout le reste (boutons images, etc).<br />
 
+		<img id="flashID2" alt="photo de Flash" class="flashClass teleport" src="flash.jpg" width="200px"/>
 
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/evenements.js"></script>
