--- a/examen50/index.html
+++ b/examen50/index.html
@@ -11,7 +11,45 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<div class="container">
+    <!------------ première rangée  ------------->
+    <div class="row no-gutters" id="premiererangee">
+        <div class="col-xl-8">
+            <img src="img/img1.jpg" alt="klimt" id="1" class="img-fluid">
+        </div>
+        <div class="col-xl-8">
+            <img src="img/img2.jpg" alt="klimt" id="2" class="img-fluid">
+        </div>
+        <div class="col-xl-8">
+            <img src="img/img3.jpg" alt="klimt" id="3" class="img-fluid">
+        </div>
+    </div>
+        <!----------2em rangées  ----------->
+    <div class="row no-guttters" id="rangee2">
+        <div class="col-4">
+            <img src="img/img4.jpg" alt="klimt" id="4">
+        </div>
+        <div class="col-4">
+            <img src="img/img5.jpg" alt="klimt" id="5">
+        </div>
+        <div class="col-4">
+            <img src="img/img6.jpg" alt="klimt" id="6">
+        </div>
+    </div>
+    <!----------3em rangées  ----------->
+    <div class="row no-gutters" id="rangee3">
+        <div class="col-4">
+            <img src="img/img7.jpg" alt="klimt" id="7">
+        </div>
+        <div class="col-4">
+            <img src="img/img8.jpg" alt="klimt" id="8">
+        </div>
+        <div class="col-4">
+            <img src="img/img9.jpg" alt="klimt" id="9">
+        </div>
+    </div>
 
+</div>
 
 
 
@@ -38,5 +76,6 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="casseTete.js"></script>
 </body>
 </html>
