Résultat final de Flash

--- a/Flash/Index.html
+++ b/Flash/Index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<section id="sectionbouton">
 		<img id="flashID" alt="photo de Flash" class="flashClass" src="flash.jpg" width="200px"/>
 		<br/>
 		<input type="button" value="Déplacer Gauche" id="boutonGauche"/> <br/>
@@ -25,7 +26,9 @@
 <input type="button" value="VitesseSupreme" id="boutonVitesseSupreme"/>Flash doit apparaître et disparaître toutes les 500MS pendant 5 secondes.<br />
 <input type="button" value="Nuke" id="boutonNuke"/>Ce bouton fait afficher une image d'explosion dans l'écran et enlève tout le reste (boutons images, etc).<br />
 
-		<img id="flashID2" alt="photo de Flash" class="flashClass teleport" src="flash.jpg" width="200px"/>
+		<img id="flashID2" alt="photo de Flash" class="flashClass" src="flash.jpg" width="200px"/>
+</section>
+<img id="nuke" alt="photo de Nuke" src="téléchargement.jpeg" width="200px"/>
 
 		<script src="js/jquery-3.3.1.min.js"></script>
 		<script src="js/evenements.js"></script>
